--- a/poll-wp/public/css/ts_poll-public.css
+++ b/poll-wp/public/css/ts_poll-public.css
@@ -2,6 +2,16 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
+form.ts_poll_form>.ts_poll_section {
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+form.ts_poll_form>.ts_poll_section:not(.tsp_active_section),
+form.ts_poll_form>div.ts_load_vue_poll.tsp_not_active_section {
+    display: none !important;
+}
+
 form.ts_poll_form {
     position: relative;
     display: -ms-flexbox;
@@ -21,37 +31,24 @@ form.ts_poll_form {
     margin-top: .9375rem !important;
 }
 
-form.ts_poll_form>.ts_poll_section {
-    padding: 0 !important;
-    margin: 0 !important;
-    -webkit-animation-name: tsPollFadeIn;
-    animation-name: tsPollFadeIn;
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-}
-
-@-webkit-keyframes tsPollFadeIn {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes tsPollFadeIn {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
+form.ts_poll_form>div.ts_load_vue_poll,
+div.ts_load_vue_poll>div.ts_load_poll_logo {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    flex-direction: column;
+    -ms-flex-direction: column;
+    -webkit-box-direction: column;
+    width: 100% !important;
 }
 
 .ts_poll_section button:focus,
@@ -67,6 +64,48 @@ form.ts_poll_form>.ts_poll_section {
 
 .ts_poll_section input[type=radio]:checked+label:before {
     background-color: inherit !important;
+}
+
+div.ts_load_vue_poll>span.tsp_load_span {
+    margin-top: 1.25rem !important;
+    padding: .625rem .9375rem !important;
+    box-shadow: 0 .0625rem .25rem rgba(0, 0, 0, .3) !important;
+    background-color: #f7f7f7 !important;
+    border-radius: .3125rem !important;
+    font-size: .75rem !important;
+    color: #222 !important;
+    word-break: break-word !important;
+    letter-spacing: .0313rem !important;
+}
+
+div.ts_load_poll_logo>div.tsp_load_circle {
+    width: 3rem !important;
+    height: 3rem !important;
+    border: 0.5rem solid #f3f3f3 !important;
+    border-radius: 50% !important;
+    border-top: 0.5rem solid #8c8c8c !important;
+    -webkit-animation: ts_poll_logo_spin 1.5s linear infinite;
+    animation: ts_poll_logo_spin 1.5s linear infinite;
+}
+
+@-webkit-keyframes ts_poll_logo_spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes ts_poll_logo_spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .tsp_sceleton_item {
